force-app/main/default/objects/FieldDependency__c/FieldDependency__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Dependência de Campo</label>
</CustomObject>