force-app/main/default/objects/FieldDependency__c/fields/DependencyField__c.field-meta.xml
<CustomField>
    <fullName>DependencyField__c</fullName>
    <label>Campo Dependente</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>