force-app/main/default/objects/FieldDependency__c/fields/DependencyFieldKey__c.field-meta.xml
<CustomField>
    <fullName>DependencyFieldKey__c</fullName>
    <label>Campo Chave</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>