force-app/main/default/objects/FieldDependency__c/fields/DependencyValue__c.field-meta.xml
<CustomField>
    <fullName>DependencyValue__c</fullName>
    <label>Valores a serem exibidos</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>